2005-09-26  Ulrich Drepper  <drepper@redhat.com>

	[BZ #838]
	* malloc/arena.c (ptmalloc_lock_all): If global lock already taken
	by the same thread, just bump the counter.
	(ptmalloc_unlock_all): If counter for recursive locks hasn't reached
	zero, don't do anything else.
	* malloc/Makefile (tests): Add tst-mallocfork.
	* malloc/tst-mallocfork.c: New file.

	[BZ #808]
	* malloc/malloc.c (_int_realloc): Make error message clearer.

	[BZ #713]
	* libio/iofgets.c: Treat N==1 correctly.
	* libio/iofgets_u.c: Likewise.
	* libio/iofgetws.c: Likewise.
	* libio/iofgetws_u.c: Likewise.
	* stdio-common/Makefile (tests): Add tst-fgets.
	* stdio-common/tst-fgets.c: New file.

2005-01-11  Thorsten Kukuk  <kukuk@suse.de>

	[BZ #652]
	* posix/getconf.c: Add new option -a to print the names of
	the current system configuration variables to stdout.
	Based on patch from Josh Aas <josha@sgi.com>.

2005-09-26  Ulrich Drepper  <drepper@redhat.com>

	[BZ #644]
	* sysdeps/posix/getaddrinfo.c (fls): New function.
	(gaih_inet): Don't use ffs, use fls.  Convert address to native byte
	order first.
	* posix/Makefile (tests): Add tst-rfc3484.
	* posix/tst-rfc3484.c: New file.

	[BZ #627]
	* libio/iofclose.c (_IO_new_fclose): Unlock the internal lock
	before destroying it as part of the _IO_FINISH call.
	* libio/oldiofclose.c (_IO_old_fclose): Likewise.

	[BZ #524]
	* sysdeps/posix/getaddrinfo.c (match_prefix): Fix matching loop if
	number of bits is multiple of 8.
	Patch by Fredrik Tolf <fredrik@dolda2000.com>.

	[BZ #516]
	* elf/dl-load.c: Report failed loading due to ELF class mismatch
	with better words.

	[BZ #162]
	* manual/llio.texi (Waiting for I/O): Correct description of read
	conditions reported by select.

2005-09-24  Jakub Jelinek  <jakub@redhat.com>

	* inet/getnetgrent_r.c (innetgr): Call endfct even if result != 0.
	Return 1 only if result == 1.  Patch by Benoit Capelle.

2005-09-25  Ulrich Drepper  <drepper@redhat.com>

	[BZ #278]