@@ -1,3 +1,12 @@
+2005-09-27  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #1078]
+	* libio/fileops.c (_IO_new_file_xsputn): Determine amount of
+	available space in non-line-buffered buffer correctly.
+	* libio/oldfileops.c (_IO_old_file_xsputn): Likewise.
+	* stdio-common/Makefile (tests): Add tst-fwrite.
+	* stdio-common/tst-fwrite.c: New file.
+
 2005-09-26  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #838]
